<resources>
    <string name="app_name" translatable="false">My Movies</string>
    <string name="poster_film">Film poster</string>
    <string name="the_most_popular">The most popular</string>
    <string name="the_most_rated">The most rated</string>
    <string name="film_overview">Description:</string>
    <string name="release_date">Release date:</string>
    <string name="film_rating">Rating:</string>
    <string name="original_title_film">Original title:</string>
    <string name="title_film">Title:</string>
    <string name="menu_item_main">Main</string>
    <string name="menu_item_favourite">Favourite</string>
    <string name="launch_trailer">Start trailer</string>
    <string name="label_trailers">Trailers</string>
    <string name="label_reviews">Reviews</string>
    <string name="no_reviews">No reviews for this film in your language</string>
</resources>
